<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.example.android.bakery_shop.MainActivity">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/desc"
        android:src="@drawable/main_pic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView style="@style/ImageView_2"
               android:src="@drawable/bread"/>

            <TextView style="@style/TextViewStyle"
                android:layout_weight="1"
                android:text="@string/bread_txt"/>

            <TextView style="@style/TextViewStyle_2"
                android:text="@string/open_h1"/>

        </LinearLayout>
    </LinearLayout>

    <View style="@style/ViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView style="@style/ImageView_2"
            android:src="@drawable/cupcake" />

        <TextView style="@style/TextViewStyle"
            android:text="@string/cake_txt"/>

        <TextView style="@style/TextViewStyle_2"
                 android:text="@string/open_h2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView style="@style/TextViewStyle"
            android:text="@string/describe_txt"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
</LinearLayout>






